src/objects/Session_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Date_added__c</fullName>
        <label>Date added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Resource_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Session Resource Category</label>
        <referenceTo>Session_Category__c</referenceTo>
        <relationshipLabel>Session Resources</relationshipLabel>
        <relationshipName>Session_Resources</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post</fullName>
                </value>
                <value>
                    <fullName>Pre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Session Resource</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Session_Resource_Category__c</columns>
        <columns>Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Session Resources Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Resources</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>